--- a/playbook.yml
+++ b/playbook.yml
@@ -8,6 +8,7 @@
 
   roles:
     - { role: common }
+    - { role: brave-browser }
     - { role: zsh }
     - { role: dotfiles }
     - { role: php }
